# SCSilicon2

./: .gitignore  .readthedocs.yml  README.md  pyproject.toml  requirements.txt  setup.py
docs/: Makefile  conf.py  contributors.md  index.md  index.rst  references.md  release-notes.md  requirements.txt  tutorials.md  tutorials.rst
docs/release-notes/: 1.0.0.md  1.0.1.md  index.md
example/input/: dbsnp.tsv
example/profile/: changes.csv  cnv_profile.csv  maternal_cnv_matrix.csv  paternal_cnv_matrix.csv  phases.csv  tree.newick
src/scsilicon2/: __init__.py  generate_barcode_bam.py  main.py  random_tree.py  utils.py
src/scsilicon2/data/: barcodes.txt
